--- a/todo.org
+++ b/todo.org
@@ -1,3 +1,4 @@
+ - Fix offline version's rounding
  - Is Mardia's skewness test two-tailed? Do we even need to specify?
  - Extend error checking during data import to offline version
  - Give variables more descriptive names
